Translation update done using Pootle.

--- a/po/sr@latin.po
+++ b/po/sr@latin.po
@@ -4,15 +4,15 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-21 13:53+0200\n"
-"PO-Revision-Date: 2010-03-30 23:47+0200\n"
-"Last-Translator: Michal <michal@cihar.com>\n"
+"PO-Revision-Date: 2010-07-22 02:27+0200\n"
+"Last-Translator: Marc Delisle <marc@infomarc.info>\n"
 "Language-Team: serbian_latin <sr@latin@li.org>\n"
 "Language: sr@latin\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n"
-"%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
+"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%"
+"10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
 "X-Generator: Pootle 2.0.1\n"
 
 #: browse_foreigners.php:37 browse_foreigners.php:58
@@ -2811,10 +2811,9 @@ msgid "Table structure for table"
 msgstr "Struktura tabele"
 
 #: libraries/export/latex.php:13
-#, fuzzy
 #| msgid "Content of table __TABLE__"
 msgid "Content of table @TABLE@"
-msgstr "Sadržaj tabele __TABLE__"
+msgstr "Sadržaj tabele @TABLE@"
 
 #: libraries/export/latex.php:14
 msgid "(continued)"
@@ -8384,318 +8383,3 @@ msgstr "Promeni ime tabele u "
 #~ msgstr ""
 #~ "Ne mogu da koristim iconv ili libiconv ili recode_string funkcije iako "
 #~ "ekstenzija prijavljuje da je učitana. Proverite vašu PHP konfiguraciju."
-
-#, fuzzy
-#~| msgid "Add new field"
-#~ msgid "Add field"
-#~ msgstr "Dodaj novo polje"
-
-#~ msgid "Field"
-#~ msgstr "Polje"
-
-#~ msgid "Records"
-#~ msgstr "Zapisi"
-
-#~ msgid "Fields terminated by"
-#~ msgstr "Polja razdvojena sa"
-
-#~ msgid "Fields"
-#~ msgstr "Polja"
-
-#~ msgid "Field %s has been dropped"
-#~ msgstr "Polje %s je obrisano"
-
-#~ msgid "See image/jpeg: inline"
-#~ msgstr "Prikaži JPEG slike na strani"
-
-#, fuzzy
-#~| msgid "\"zipped\""
-#~ msgid "zipped"
-#~ msgstr "\"zipovano\""
-
-#, fuzzy
-#~| msgid "\"gzipped\""
-#~ msgid "gzipped"
-#~ msgstr "\"gzip-ovano\""
-
-#, fuzzy
-#~| msgid "\"bzipped\""
-#~ msgid "bzipped"
-#~ msgstr "\"bzip-ovano\""
-
-#, fuzzy
-#~| msgid "Add custom comment into header (\\n splits lines)"
-#~ msgid ""
-#~ "Add custom comment into header (\n"
-#~ " splits lines)"
-#~ msgstr "Dodaj komentar u zaglavlje (\\n razdvaja linije)"
-
-#, fuzzy
-#~ msgid "and"
-#~ msgstr "i"
-
-#, fuzzy
-#~ msgctxt "$strBLOBRepositoryDisabled"
-#~ msgid "Disabled"
-#~ msgstr "Onemogućeno"
-
-#, fuzzy
-#~ msgctxt "$strBLOBRepositoryEnabled"
-#~ msgid "Enabled"
-#~ msgstr "Omogućeno"
-
-#, fuzzy
-#~ msgctxt "$strBLOBRepositoryRepair"
-#~ msgid "Repair"
-#~ msgstr "Popravi tabelu"
-
-#~ msgid "Calendar"
-#~ msgstr "Kalendar"
-
-#~ msgid "MySQL&nbsp;4.0 compatible"
-#~ msgstr "MySQL&nbsp;4.0 kompatibilno"
-
-#~ msgid "Could not load default configuration from: \"%1$s\""
-#~ msgstr "Ne mogu da učitam podrazumevanu konfiguraciju iz: \"%1$s\""
-
-#~ msgid "Create an index on&nbsp;%s&nbsp;columns"
-#~ msgstr "Napravi ključ na&nbsp;%s&nbsp;kolona"
-
-#, fuzzy
-#~ msgctxt "$strCreateTableShort"
-#~ msgid "Create table"
-#~ msgstr "Napravi tabelu"
-
-#, fuzzy
-#~ msgctxt "$strCreateUserDatabaseNone"
-#~ msgid "None"
-#~ msgstr "nema"
-
-#~ msgid "Flush the table (\"FLUSH\")"
-#~ msgstr "Osveži tabelu (\"FLUSH\")"
-
-#~ msgid "Invalid server index: \"%s\""
-#~ msgstr "Neispravan indeks servera: \"%s\""
-
-#~ msgctxt "$strMIME_description"
-#~ msgid "Description"
-#~ msgstr "Opis"
-
-#, fuzzy
-#~ msgctxt "$strNoneDefault"
-#~ msgid "None"
-#~ msgstr "nema"
-
-#~ msgid "Schema of the \"%s\" database - Page %s"
-#~ msgstr "Shema baze \"%s\" - Strana %s"
-
-#~ msgid "The \"%s\" table doesn't exist!"
-#~ msgstr "Tabela \"%s\" ne postoji!"
-
-#~ msgid "running on %s"
-#~ msgstr "na serveru %s"
-
-#~ msgid "The scale factor is too small to fit the schema on one page"
-#~ msgstr "Faktor umanjenja je premali da bi shema stala na jednu stranu"
-
-#~ msgid ""
-#~ "Cannot start session without errors, please check errors given in your "
-#~ "PHP and/or webserver log file and configure your PHP installation "
-#~ "properly."
-#~ msgstr ""
-#~ "Ne mogu da pokrenem sesiju bez grešaka, molim proverite greške u PHP i/"
-#~ "ili dnevniku veb servera i propisno podesite vašu PHP instalaciju."
-
-#, fuzzy
-#~| msgid ""
-#~| "However on last run no data has been parsed, this usually means "
-#~| "phpMyAdmin won't be able to finish this import unless you increase php "
-#~| "time limits."
-#~ msgid ""
-#~ "However on last run no data has been parsed, this usually means "
-#~ "phpMyAdmin won"
-#~ msgstr ""
-#~ "Međutim, pri poslednjem pokretanju podaci nisu bili obrađeni, što obično "
-#~ "znači da phpMyAdmin neće biti u mogućnosti da završi ovaj uvoz osim ako "
-#~ "ne povećate vremenska ograničenja u PHP-u"
-
-#, fuzzy
-#~| msgid "None"
-#~ msgctxt "None action"
-#~ msgid "None"
-#~ msgstr "nema"
-
-#, fuzzy
-#~| msgid "None"
-#~ msgctxt ""
-#~ msgid "None"
-#~ msgstr "nema"
-
-#, fuzzy
-#~| msgid "Grant all privileges on wildcard name (username\\_%)"
-#~ msgid "Grant all privileges on wildcard name (username_%)"
-#~ msgstr "Daj sve privilegije na imenu sa džokerima (korisničko_ime\\_%)"
-
-#, fuzzy
-#~| msgid "The \"%s\" table doesn't exist!"
-#~ msgid "The %s table doesn"
-#~ msgstr "Tabela \"%s\" ne postoji!"
-
-#, fuzzy
-#~| msgid "Could not load default configuration from: \"%1$s\""
-#~ msgid "Could not load default configuration from: %1"
-#~ msgstr "Ne mogu da učitam podrazumevanu konfiguraciju iz: \"%1$s\""
-
-#, fuzzy
-#~| msgid "Invalid hostname for server %1$s. Please review your configuration."
-#~ msgid "Invalid hostname for server %1. Please review your configuration."
-#~ msgstr ""
-#~ "Neispravan naziv servera %1$s. Molimo proverite svoju konfiguraciju."
-
-#, fuzzy
-#~| msgid "Error renaming table %1$s to %2$s"
-#~ msgid "Error renaming table %1 to %2"
-#~ msgstr "Greška pri preimenovanju tabele %1$s u %2$s"
-
-#, fuzzy
-#~| msgid ""
-#~| "Cannot load [a@http://php.net/%1$s@Documentation][em]%1$s[/em][/a] "
-#~| "extension. Please check your PHP configuration."
-#~ msgid ""
-#~ "Cannot load [a@http://php.net/%1@Documentation][em]%1[/em][/a] extension. "
-#~ "Please check your PHP configuration."
-#~ msgstr ""
-#~ "ne mogu da učitam ekstenziju %s,<br />molim proverite PHP konfiguraciju"
-
-#, fuzzy
-#~ msgid "(or the local MySQL server"
-#~ msgstr "Ne mogu da se prijavim na MySQL server"
-
-#, fuzzy
-#~| msgid ""
-#~| "There is a chance that you may have found a bug in the SQL parser. "
-#~| "Please examine your query closely, and check that the quotes are correct "
-#~| "and not mis-matched. Other possible failure causes may be that you are "
-#~| "uploading a file with binary outside of a quoted text area. You can also "
-#~| "try your query on the MySQL command line interface. The MySQL server "
-#~| "error output below, if there is any, may also help you in diagnosing the "
-#~| "problem. If you still have problems or if the parser fails where the "
-#~| "command line interface succeeds, please reduce your SQL query input to "
-#~| "the single query that causes problems, and submit a bug report with the "
-#~| "data chunk in the CUT section below:"
-#~ msgid ""
-#~ "There is a chance that you may have found a bug in the SQL parser. Please "
-#~ "examine your query closely, and check that the quotes are correct and not "
-#~ "mis-matched. Other possible failure causes may be that you are uploading "
-#~ "a file with binary outside of a quoted text area. You can also try your "
-#~ "query on the MySQL command line interface. The MySQL server error output "
-#~ "be . "
-#~ msgstr ""
-#~ "Postoji mogućnost da ste pronašli bag u SQL parseru. Molimo ispitajte "
-#~ "svoj upit pažljivo, i proverite da su navodnici ispravni i da ne "
-#~ "nedostaju. Ostali mogući razlozi greške mogu biti da ste poslali binarnu "
-#~ "datoteku van oblasti za običan tekst. Možete probati svoj upit u MySQL "
-#~ "sučelju komandne linije. Donja poruka o grešci MySQL servera, ako je ima, "
-#~ "može vam pomoći u otkrivanju problema. Ako i dalje imate probleme ili ako "
-#~ "parser ne uspeva tamo gde uspeva sučelje komandne linije, svedite svoj "
-#~ "SQL upit na jedan jedini upit koji stvara probleme i pošaljite nam "
-#~ "izveštaj o grešci sa delom koda u donjoj REZ sekciji:"
-
-#~ msgctxt "$strStrucCSV"
-#~ msgid "CSV"
-#~ msgstr "CSV format"
-
-#~ msgid "Copy"
-#~ msgstr "Kopiraj"
-
-#~ msgid "Delete the users and reload the privileges afterwards."
-#~ msgstr "Obriši korisnike i ponovo učitaj privilegije."
-
-#~ msgid ""
-#~ "This is the cleanest way, but reloading the privileges may take a while."
-#~ msgstr ""
-#~ "Ovo je najčistiji način, ali ponovno učitavanje privilegina može da "
-#~ "potraje."
-
-#~ msgid "has been altered."
-#~ msgstr "je promenjen(a)."
-
-#~ msgid "Microsoft Excel 2000"
-#~ msgstr "Microsoft Excel 2000"
-
-#~ msgid "Internet Explorer does not support this function."
-#~ msgstr "Internet Explorer ne podržava ovu funkciju."
-
-#~ msgid ""
-#~ "The &quot;deleted&quot; users will still be able to access the server as "
-#~ "usual until the privileges are reloaded."
-#~ msgstr ""
-#~ "&quot;Obrisani&quot; korisnici će i dalje imati pristup serveru dok "
-#~ "privilegije ne budu ponovo učitane."
-
-#~ msgid "Just delete the users from the privilege tables."
-#~ msgstr "Samo obriši korisnike iz tabele privilegija."
-
-#~ msgid ""
-#~ "Allows running stored procedures; has no effect in this MySQL version."
-#~ msgstr ""
-#~ "Dozvoljava pokretanje sačuvanih procedura. Nema efekta u ovoj verziji "
-#~ "MySQL-a."
-
-#~ msgid "Process list"
-#~ msgstr "Lista procesa"
-
-#~ msgid "Reload privileges"
-#~ msgstr "Ponovo učitaj privilegije"
-
-#~ msgid ""
-#~ "The users will still have the USAGE privilege until the privileges are "
-#~ "reloaded."
-#~ msgstr ""
-#~ "Korisnici će i dalje imati USAGE privilegije dok se privilegije ponovo ne "
-#~ "učitaju."
-
-#~ msgid "Native MS Excel format"
-#~ msgstr "Izvorni MS Excel podaci"
-
-#, fuzzy
-#~| msgid "Select All"
-#~ msgctxt "Create SELECT * query"
-#~ msgid "Select all"
-#~ msgstr "Izaberi sve"
-
-#, fuzzy
-#~| msgid "Select All"
-#~ msgctxt "Create SELECT ... query"
-#~ msgid "Select"
-#~ msgstr "Izaberi sve"
-
-#, fuzzy
-#~| msgid "Insert"
-#~ msgctxt "Create INSERT query"
-#~ msgid "Insert"
-#~ msgstr "Novi zapis"
-
-#, fuzzy
-#~| msgid "Update Query"
-#~ msgctxt "Create UPDATE query"
-#~ msgid "Update"
-#~ msgstr "Ažuriraj upit"
-
-#, fuzzy
-#~| msgid "Delete"
-#~ msgctxt "Create DELETE query"
-#~ msgid "Delete"
-#~ msgstr "Obriši"
-
-#~ msgid "utf-8"
-#~ msgstr "utf-8"
-
-#~ msgid "Jan0"
-#~ msgstr "jan0"
-
-#~ msgid "Jan1"
-#~ msgstr "jan1"
-
-#~ msgid "Jan2"
-#~ msgstr "jan2"
