--- a/po/sr@latin.po
+++ b/po/sr@latin.po
@@ -2820,10 +2820,9 @@ msgid "(continued)"
 msgstr "(nastavljeno)"
 
 #: libraries/export/latex.php:15
-#, fuzzy
 #| msgid "Structure of table __TABLE__"
 msgid "Structure of table @TABLE@"
-msgstr "Struktura tabele __TABLE__"
+msgstr "Struktura tabele @TABLE@"
 
 #: libraries/export/latex.php:26
 msgid "LaTeX"
