Translation update done using Pootle.

--- a/po/ru.po
+++ b/po/ru.po
@@ -4,15 +4,15 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-21 13:53+0200\n"
-"PO-Revision-Date: 2010-03-30 23:23+0200\n"
-"Last-Translator: Michal <michal@cihar.com>\n"
+"PO-Revision-Date: 2010-07-22 02:27+0200\n"
+"Last-Translator: Marc Delisle <marc@infomarc.info>\n"
 "Language-Team: russian <ru@li.org>\n"
 "Language: ru\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n"
-"%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
+"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%"
+"10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
 "X-Generator: Pootle 2.0.1\n"
 
 #: browse_foreigners.php:37 browse_foreigners.php:58
@@ -2856,10 +2856,9 @@ msgid "Table structure for table"
 msgstr "Структура таблицы"
 
 #: libraries/export/latex.php:13
-#, fuzzy
 #| msgid "Content of table __TABLE__"
 msgid "Content of table @TABLE@"
-msgstr "Содержимое таблицы __TABLE__"
+msgstr "Содержимое таблицы @TABLE@"
 
 #: libraries/export/latex.php:14
 msgid "(continued)"
@@ -8724,379 +8723,3 @@ msgstr "Переименовать таблицу в"
 
 #~ msgid "Default character set"
 #~ msgstr "Кодировка по умолчанию"
-
-#, fuzzy
-#~| msgid "Add new field"
-#~ msgid "Add field"
-#~ msgstr "Добавить новое поле"
-
-#~ msgid "Field"
-#~ msgstr "Поле"
-
-#~ msgid "Records"
-#~ msgstr "Записи"
-
-#~ msgid "Fields terminated by"
-#~ msgstr "Разделитель полей"
-
-#~ msgid "Fields"
-#~ msgstr "Поля"
-
-#~ msgid "Add %s field(s)"
-#~ msgstr "Добавить %s поле(я)"
-
-#~ msgid "Field %s has been dropped"
-#~ msgstr "Поле &quot;%s&quot; было удалено"
-
-#~ msgid "See image/jpeg: inline"
-#~ msgstr ""
-#~ "Отображает уменьшенную иконку изображения, на которую можно нажать для "
-#~ "увеличения. Параметрами задается максимальная ширина и высота картинки в "
-#~ "пикселях. Изначальное соотношение сторон, сохраняется."
-
-#, fuzzy
-#~| msgid "\"zipped\""
-#~ msgid "zipped"
-#~ msgstr "zip"
-
-#, fuzzy
-#~| msgid "\"gzipped\""
-#~ msgid "gzipped"
-#~ msgstr "gzip"
-
-#, fuzzy
-#~| msgid "\"bzipped\""
-#~ msgid "bzipped"
-#~ msgstr "bzip"
-
-#, fuzzy
-#~| msgid "Add custom comment into header (\\n splits lines)"
-#~ msgid ""
-#~ "Add custom comment into header (\n"
-#~ " splits lines)"
-#~ msgstr "Добавить собственный комментарий в заголовок (перевод строки: \\n)"
-
-#~ msgid "and"
-#~ msgstr "и"
-
-#, fuzzy
-#~ msgctxt "$strBLOBRepositoryDisabled"
-#~ msgid "Disabled"
-#~ msgstr "Отключено"
-
-#, fuzzy
-#~ msgctxt "$strBLOBRepositoryEnabled"
-#~ msgid "Enabled"
-#~ msgstr "Включено"
-
-#, fuzzy
-#~ msgctxt "$strBLOBRepositoryRepair"
-#~ msgid "Repair"
-#~ msgstr "Восстановить"
-
-#~ msgid "Calendar"
-#~ msgstr "Календарь"
-
-#~ msgid "MySQL&nbsp;4.0 compatible"
-#~ msgstr "MySQL&nbsp;4.0 совместимо"
-
-#~ msgid "Could not load default configuration from: \"%1$s\""
-#~ msgstr "Невозможно загрузить изначальную конфигурацию из: &quot;%1$s&quot;"
-
-#~ msgid "Create an index on&nbsp;%s&nbsp;columns"
-#~ msgstr "Создать индекс для &nbsp;%s&nbsp; столбца/ов"
-
-#, fuzzy
-#~ msgctxt "$strCreateTableShort"
-#~ msgid "Create table"
-#~ msgstr "Создать таблицу"
-
-#, fuzzy
-#~ msgctxt "$strCreateUserDatabaseNone"
-#~ msgid "None"
-#~ msgstr "Нет"
-
-#~ msgid "Flush the table (\"FLUSH\")"
-#~ msgstr "Обновить кеш таблицы (&quot;FLUSH&quot;)"
-
-#~ msgid "Invalid server index: \"%s\""
-#~ msgstr "Неправильный номер сервера: &quot;%s&quot;"
-
-#~ msgctxt "$strMIME_description"
-#~ msgid "Description"
-#~ msgstr "Описание"
-
-#~ msgctxt "$strNoneDefault"
-#~ msgid "None"
-#~ msgstr "Нет"
-
-#~ msgid "Schema of the \"%s\" database - Page %s"
-#~ msgstr "Структура базы данных \"%s\" - Страница %s"
-
-#~ msgid "The \"%s\" table doesn't exist!"
-#~ msgstr "Таблица \"%s\" не существует!"
-
-#~ msgid ""
-#~ "This MySQL server works as %s in <b>replication</b> process. For further "
-#~ "information about replication status on the server, please visit the <a "
-#~ "href=\"#replication\">replication section</a>."
-#~ msgstr ""
-#~ "Данный MySQL сервер работает, как %s в процессе <b>репликации</b>. Для "
-#~ "получения подробной информации о состоянии репликации сервера, "
-#~ "пожалуйста, перейдите в <a href=\"#replication\">раздел репликации</a>."
-
-#~ msgid "running on %s"
-#~ msgstr "на %s"
-
-#~ msgid "The scale factor is too small to fit the schema on one page"
-#~ msgstr ""
-#~ "Схема не помещается на одной странице. Необходимо уменьшить масштаб."
-
-#~ msgid ""
-#~ "Cannot start session without errors, please check errors given in your "
-#~ "PHP and/or webserver log file and configure your PHP installation "
-#~ "properly."
-#~ msgstr ""
-#~ "Произошла ошибка в работе механизма сессии. Проверьте файлы журналов PHP "
-#~ "и/или Веб-сервера на наличие ошибок, и произведите их корректное "
-#~ "конфигурирование."
-
-#, fuzzy
-#~| msgid "Import currencies ($5.00 to 5.00)"
-#~ msgid "Import currencies (.00 to 5.00)"
-#~ msgstr "Импортировать денежные единицы ($5.00 в 5.00)"
-
-#, fuzzy
-#~| msgid ""
-#~| "However on last run no data has been parsed, this usually means "
-#~| "phpMyAdmin won't be able to finish this import unless you increase php "
-#~| "time limits."
-#~ msgid ""
-#~ "However on last run no data has been parsed, this usually means "
-#~ "phpMyAdmin won"
-#~ msgstr ""
-#~ "Несмотря на последний запуск, данные не были обработаны. Как правило это "
-#~ "означает, что phpMyAdmin не сможет завершить процесс импорта до тех пор, "
-#~ "пока не будет увеличено ограничение времени выполнения php-сценариев."
-
-#, fuzzy
-#~| msgid "None"
-#~ msgctxt "None action"
-#~ msgid "None"
-#~ msgstr "Нет"
-
-#, fuzzy
-#~| msgid "None"
-#~ msgctxt ""
-#~ msgid "None"
-#~ msgstr "Нет"
-
-#, fuzzy
-#~| msgid "Grant all privileges on wildcard name (username\\_%)"
-#~ msgid "Grant all privileges on wildcard name (username_%)"
-#~ msgstr ""
-#~ "Предоставить полные привилегии на базы данных подпадающие под шаблон (имя "
-#~ "пользователя\\_%)"
-
-#, fuzzy
-#~| msgid "The \"%s\" table doesn't exist!"
-#~ msgid "The %s table doesn"
-#~ msgstr "Таблица \"%s\" не существует!"
-
-#, fuzzy
-#~| msgid "Could not load default configuration from: \"%1$s\""
-#~ msgid "Could not load default configuration from: %1"
-#~ msgstr "Невозможно загрузить изначальную конфигурацию из: &quot;%1$s&quot;"
-
-#, fuzzy
-#~| msgid "Invalid hostname for server %1$s. Please review your configuration."
-#~ msgid "Invalid hostname for server %1. Please review your configuration."
-#~ msgstr ""
-#~ "Для сервера %1$s указано неверное имя хоста. Исправьте настройки заданные "
-#~ "в конфигурационном файле phpMyAdmin."
-
-#, fuzzy
-#~| msgid "Error renaming table %1$s to %2$s"
-#~ msgid "Error renaming table %1 to %2"
-#~ msgstr "Ошибка при переименовании таблицы %1$s в %2$s"
-
-#, fuzzy
-#~| msgid ""
-#~| "Cannot load [a@http://php.net/%1$s@Documentation][em]%1$s[/em][/a] "
-#~| "extension. Please check your PHP configuration."
-#~ msgid ""
-#~ "Cannot load [a@http://php.net/%1@Documentation][em]%1[/em][/a] extension. "
-#~ "Please check your PHP configuration."
-#~ msgstr ""
-#~ "Невозможно загрузить расширение [a@http://php.net/%1$s@Documentation]"
-#~ "[em]%1$s[/em][/a]! Проверьте настройки PHP."
-
-#, fuzzy
-#~| msgid ""
-#~| "This server is not configured as master in a replication process. Would "
-#~| "you like to <a href=\"%s\">configure</a> it?"
-#~ msgid ""
-#~ "This server is not configured as master in a replication process. Would "
-#~ "you like to <a href=%s>configure</a> it?"
-#~ msgstr ""
-#~ "Данный сервер не настроен в качестве головного для процесса репликации. "
-#~ "Хотите произвести <a href=\"%s\">настройку</a>?"
-
-#, fuzzy
-#~| msgid ""
-#~| "This server is not configured as slave in a replication process. Would "
-#~| "you like to <a href=\"%s\">configure</a> it?"
-#~ msgid ""
-#~ "This server is not configured as slave in a replication process. Would "
-#~ "you like to <a href=%s>configure</a> it?"
-#~ msgstr ""
-#~ "Данный сервер не настроен в качестве подчинённого для процесса "
-#~ "репликации. Хотите произвести <a href=\"%s\">настройку</a>?"
-
-#, fuzzy
-#~| msgid "Could not connect to MySQL server"
-#~ msgid "(or the local MySQL server"
-#~ msgstr "Невозможно соединиться с сервером MySQL"
-
-#, fuzzy
-#~| msgid ""
-#~| "There is a chance that you may have found a bug in the SQL parser. "
-#~| "Please examine your query closely, and check that the quotes are correct "
-#~| "and not mis-matched. Other possible failure causes may be that you are "
-#~| "uploading a file with binary outside of a quoted text area. You can also "
-#~| "try your query on the MySQL command line interface. The MySQL server "
-#~| "error output below, if there is any, may also help you in diagnosing the "
-#~| "problem. If you still have problems or if the parser fails where the "
-#~| "command line interface succeeds, please reduce your SQL query input to "
-#~| "the single query that causes problems, and submit a bug report with the "
-#~| "data chunk in the CUT section below:"
-#~ msgid ""
-#~ "There is a chance that you may have found a bug in the SQL parser. Please "
-#~ "examine your query closely, and check that the quotes are correct and not "
-#~ "mis-matched. Other possible failure causes may be that you are uploading "
-#~ "a file with binary outside of a quoted text area. You can also try your "
-#~ "query on the MySQL command line interface. The MySQL server error output "
-#~ "be . "
-#~ msgstr ""
-#~ "В работе SQL-парсера произошла ошибка. Убедитесь в корректности запроса, "
-#~ "отсутствии в нем опечаток и незакрытых кавычек. Возможной причиной ошибки "
-#~ "может быть загрузка файла, содержащего двоичные данные вне кавычек в "
-#~ "тексте запроса. Попробуйте выполнить запрос через командную строку MySQL. "
-#~ "При наличии таковой, ниже будет выведена ошибка MySQL-сервера, "
-#~ "облегчающая диагностику проблемы. Если проблема не решается, хотя через "
-#~ "интерфейс командной строки запрос отрабатывает корректно, выявите ту "
-#~ "часть запроса, которая вызывает ошибку и отправьте разработчикам описание "
-#~ "ошибки, снабдив его данными из секции CUT выведенной ниже:"
-
-#~ msgctxt "$strStrucCSV"
-#~ msgid "CSV"
-#~ msgstr "CSV"
-
-#~ msgid "Copy"
-#~ msgstr "Использовать"
-
-#~ msgid "Delete the users and reload the privileges afterwards."
-#~ msgstr "Удалить всех пользователей и перезагрузить привилегии."
-
-#~ msgid ""
-#~ "This is the cleanest way, but reloading the privileges may take a while."
-#~ msgstr ""
-#~ "Это лучший способ, хотя перезагрузка привилегий может занять какое-то "
-#~ "время."
-
-#~ msgid "has been altered."
-#~ msgstr "была изменена."
-
-#~ msgid "Microsoft Excel 2000"
-#~ msgstr "Microsoft Excel 2000"
-
-#~ msgid "Internet Explorer does not support this function."
-#~ msgstr "Internet Explorer не поддерживает данную функцию."
-
-#~ msgid ""
-#~ "The &quot;deleted&quot; users will still be able to access the server as "
-#~ "usual until the privileges are reloaded."
-#~ msgstr ""
-#~ "&quot;Удаленные&quot; пользователи будут иметь доступ к серверу, пока "
-#~ "таблицы привилегий не будут перезагружены."
-
-#~ msgid "Just delete the users from the privilege tables."
-#~ msgstr "Просто удалить пользователей из таблиц привилегий."
-
-#~ msgid ""
-#~ "Allows running stored procedures; has no effect in this MySQL version."
-#~ msgstr ""
-#~ "Разрешает выполнение хранимых процедур (не поддерживается данной версией "
-#~ "MySQL)"
-
-#~ msgid "Process list"
-#~ msgstr "Список процессов"
-
-#~ msgid "Reload privileges"
-#~ msgstr "Перезагрузить привилегии"
-
-#~ msgid ""
-#~ "The users will still have the USAGE privilege until the privileges are "
-#~ "reloaded."
-#~ msgstr ""
-#~ "Вплоть до перезагрузки привилегий, пользователи все еще будут сохранять "
-#~ "глобальные привилегии типа USAGE."
-
-#~ msgid "Native MS Excel format"
-#~ msgstr "Формат MS Excel"
-
-#~ msgid "Alter index(s)"
-#~ msgstr "Изменить индекс(ы)"
-
-#~ msgid "Tracking Mechanism"
-#~ msgstr "Механизм слежения"
-
-#, fuzzy
-#~| msgid "Select All"
-#~ msgctxt "Create SELECT * query"
-#~ msgid "Select all"
-#~ msgstr "Выделить все"
-
-#, fuzzy
-#~| msgid "Select All"
-#~ msgctxt "Create SELECT ... query"
-#~ msgid "Select"
-#~ msgstr "Выделить все"
-
-#, fuzzy
-#~| msgid "Insert"
-#~ msgctxt "Create INSERT query"
-#~ msgid "Insert"
-#~ msgstr "Вставить"
-
-#, fuzzy
-#~| msgid "Updated"
-#~ msgctxt "Create UPDATE query"
-#~ msgid "Update"
-#~ msgstr "Обновлён"
-
-#, fuzzy
-#~| msgid "Delete"
-#~ msgctxt "Create DELETE query"
-#~ msgid "Delete"
-#~ msgstr "Удалить"
-
-#~ msgid "%1$d row(s) affected."
-#~ msgstr "Затронуто строк: %1$d."
-
-#~ msgid "utf-8"
-#~ msgstr "utf-8"
-
-#~ msgid "Jan0"
-#~ msgstr "Янв0"
-
-#~ msgid "Jan1"
-#~ msgstr "Янв1"
-
-#~ msgid "Jan2"
-#~ msgstr "Янв2"
-
-#~ msgid ""
-#~ "Structure Difference' ;\n"
-#~ "$strStructureForView = 'Structure for view"
-#~ msgstr "Различие структуры"
