--- a/po/pl.po
+++ b/po/pl.po
@@ -4,14 +4,16 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-21 13:53+0200\n"
-"PO-Revision-Date: 2010-03-12 09:17+0100\n"
-"Last-Translator: Automatically generated\n"
+"PO-Revision-Date: 2010-07-22 02:29+0200\n"
+"Last-Translator: Marc Delisle <marc@infomarc.info>\n"
 "Language-Team: polish <pl@li.org>\n"
-"Language: \n"
+"Language: pl\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Translate Toolkit 1.5.3\n"
+"Plural-Forms: nplurals=3; plural=(n==1 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 "
+"|| n%100>=20) ? 1 : 2);\n"
+"X-Generator: Pootle 2.0.1\n"
 
 #: browse_foreigners.php:37 browse_foreigners.php:58
 #: libraries/display_tbl.lib.php:416 server_privileges.php:1506
@@ -2837,10 +2839,9 @@ msgid "Table structure for table"
 msgstr "Struktura tabeli dla "
 
 #: libraries/export/latex.php:13
-#, fuzzy
 #| msgid "Content of table __TABLE__"
 msgid "Content of table @TABLE@"
-msgstr "Zawartość tabeli __TABLE__"
+msgstr "Zawartość tabeli @TABLE@"
 
 #: libraries/export/latex.php:14
 msgid "(continued)"
@@ -8533,326 +8534,3 @@ msgstr "Zmień nazwę tabeli na"
 
 #~ msgid "Default character set"
 #~ msgstr "Domyślne kodowanie napisów"
-
-#, fuzzy
-#~| msgid "Add new field"
-#~ msgid "Add field"
-#~ msgstr "Dodaj nowego pole"
-
-#~ msgid "Field"
-#~ msgstr "Pole"
-
-#~ msgid "Records"
-#~ msgstr "Rekordy"
-
-#~ msgid "Fields terminated by"
-#~ msgstr "Pola oddzielane przez"
-
-#~ msgid "Fields"
-#~ msgstr "Pola"
-
-#~ msgid "Field %s has been dropped"
-#~ msgstr "Pole %s zostało usunięte"
-
-#~ msgid "See image/jpeg: inline"
-#~ msgstr "Zobacz image/jpeg: inline"
-
-#, fuzzy
-#~| msgid "\"zipped\""
-#~ msgid "zipped"
-#~ msgstr "\".zip\""
-
-#, fuzzy
-#~| msgid "\"gzipped\""
-#~ msgid "gzipped"
-#~ msgstr "\".gz\""
-
-#, fuzzy
-#~| msgid "\"bzipped\""
-#~ msgid "bzipped"
-#~ msgstr "\".bz2\""
-
-#, fuzzy
-#~| msgid "Add custom comment into header (\\n splits lines)"
-#~ msgid ""
-#~ "Add custom comment into header (\n"
-#~ " splits lines)"
-#~ msgstr "Dodaj do nagłówka własny komentarz (\\n oddziela linie)"
-
-#, fuzzy
-#~ msgid "and"
-#~ msgstr "oraz"
-
-#, fuzzy
-#~ msgctxt "$strBLOBRepositoryDisabled"
-#~ msgid "Disabled"
-#~ msgstr "Wyłączone"
-
-#, fuzzy
-#~ msgctxt "$strBLOBRepositoryEnabled"
-#~ msgid "Enabled"
-#~ msgstr "Włączone"
-
-#, fuzzy
-#~ msgctxt "$strBLOBRepositoryRepair"
-#~ msgid "Repair"
-#~ msgstr "Napraw"
-
-#~ msgid "Calendar"
-#~ msgstr "Kalendarz"
-
-#~ msgid "MySQL&nbsp;4.0 compatible"
-#~ msgstr "Kompatybilny z MySQL-em&nbsp;4.0"
-
-#~ msgid "Could not load default configuration from: \"%1$s\""
-#~ msgstr "Nie udało się załadować domyślnej konfiguracji z pliku: \"%1$s\""
-
-#~ msgid "Create an index on&nbsp;%s&nbsp;columns"
-#~ msgstr "Utwórz indeks dla %s kolumn"
-
-#, fuzzy
-#~ msgctxt "$strCreateTableShort"
-#~ msgid "Create table"
-#~ msgstr "Utwórz tabelę"
-
-#, fuzzy
-#~ msgctxt "$strCreateUserDatabaseNone"
-#~ msgid "None"
-#~ msgstr "Brak"
-
-#~ msgid "Flush the table (\"FLUSH\")"
-#~ msgstr "Przeładuj tabelę (\"FLUSH\")"
-
-#~ msgid "Invalid server index: \"%s\""
-#~ msgstr "Niewłaściwy numer serwera: \"%s\""
-
-#~ msgctxt "$strMIME_description"
-#~ msgid "Description"
-#~ msgstr "Opis"
-
-#, fuzzy
-#~ msgctxt "$strNoneDefault"
-#~ msgid "None"
-#~ msgstr "Brak"
-
-#~ msgid "Schema of the \"%s\" database - Page %s"
-#~ msgstr "Schemat bazy danych \"%s\" - strona %s"
-
-#~ msgid "The \"%s\" table doesn't exist!"
-#~ msgstr "Tabela \"%s\" nie istnieje!"
-
-#~ msgid "running on %s"
-#~ msgstr "uruchomiony na %s"
-
-#~ msgid "The scale factor is too small to fit the schema on one page"
-#~ msgstr ""
-#~ "Współczynnik skali jest za mały, by schemat zmieścił się na jednej stronie"
-
-#~ msgid ""
-#~ "Cannot start session without errors, please check errors given in your "
-#~ "PHP and/or webserver log file and configure your PHP installation "
-#~ "properly."
-#~ msgstr ""
-#~ "Nie udało się bezbłędnie utworzyć sesji. Należy sprawdzić błędy w logach "
-#~ "PHP i serwera WWW, a następnie właściwie skonfigurować instalację PHP."
-
-#, fuzzy
-#~| msgid ""
-#~| "However on last run no data has been parsed, this usually means "
-#~| "phpMyAdmin won't be able to finish this import unless you increase php "
-#~| "time limits."
-#~ msgid ""
-#~ "However on last run no data has been parsed, this usually means "
-#~ "phpMyAdmin won"
-#~ msgstr ""
-#~ "Jednakże, podczas ostatniego uruchomienia nie zostały przetworzone żadne "
-#~ "dane, co zwykle oznacza, że phpMyAdmin nie będzie w stanie ukończyć tego "
-#~ "importu bez zwiększenia limitów czasowych PHP."
-
-#, fuzzy
-#~| msgid "None"
-#~ msgctxt "None action"
-#~ msgid "None"
-#~ msgstr "Brak"
-
-#, fuzzy
-#~| msgid "None"
-#~ msgctxt ""
-#~ msgid "None"
-#~ msgstr "Brak"
-
-#, fuzzy
-#~| msgid "Grant all privileges on wildcard name (username\\_%)"
-#~ msgid "Grant all privileges on wildcard name (username_%)"
-#~ msgstr ""
-#~ "Przyznaj wszystkie uprawienia do baz danych o nazwach pasujących do maski "
-#~ "(nazwaużytkownika_%)"
-
-#, fuzzy
-#~| msgid "The \"%s\" table doesn't exist!"
-#~ msgid "The %s table doesn"
-#~ msgstr "Tabela \"%s\" nie istnieje!"
-
-#, fuzzy
-#~| msgid "Could not load default configuration from: \"%1$s\""
-#~ msgid "Could not load default configuration from: %1"
-#~ msgstr "Nie udało się załadować domyślnej konfiguracji z pliku: \"%1$s\""
-
-#, fuzzy
-#~| msgid "Invalid hostname for server %1$s. Please review your configuration."
-#~ msgid "Invalid hostname for server %1. Please review your configuration."
-#~ msgstr ""
-#~ "Niewłaściwa nazwa hosta serwera %1$s. Proszę przyjrzeć się konfiguracji."
-
-#, fuzzy
-#~| msgid "Error renaming table %1$s to %2$s"
-#~ msgid "Error renaming table %1 to %2"
-#~ msgstr "Błąd podczas zmiany nazwy tabeli z %1$s na %2$s"
-
-#, fuzzy
-#~| msgid ""
-#~| "Cannot load [a@http://php.net/%1$s@Documentation][em]%1$s[/em][/a] "
-#~| "extension. Please check your PHP configuration."
-#~ msgid ""
-#~ "Cannot load [a@http://php.net/%1@Documentation][em]%1[/em][/a] extension. "
-#~ "Please check your PHP configuration."
-#~ msgstr ""
-#~ "nie udało się załadować modułu %s,<br />proszę sprawdzić konfigurację PHP"
-
-#, fuzzy
-#~| msgid "Could not connect to MySQL server"
-#~ msgid "(or the local MySQL server"
-#~ msgstr "Nie można połączyć się z serwerem MySQL"
-
-#, fuzzy
-#~| msgid ""
-#~| "There is a chance that you may have found a bug in the SQL parser. "
-#~| "Please examine your query closely, and check that the quotes are correct "
-#~| "and not mis-matched. Other possible failure causes may be that you are "
-#~| "uploading a file with binary outside of a quoted text area. You can also "
-#~| "try your query on the MySQL command line interface. The MySQL server "
-#~| "error output below, if there is any, may also help you in diagnosing the "
-#~| "problem. If you still have problems or if the parser fails where the "
-#~| "command line interface succeeds, please reduce your SQL query input to "
-#~| "the single query that causes problems, and submit a bug report with the "
-#~| "data chunk in the CUT section below:"
-#~ msgid ""
-#~ "There is a chance that you may have found a bug in the SQL parser. Please "
-#~ "examine your query closely, and check that the quotes are correct and not "
-#~ "mis-matched. Other possible failure causes may be that you are uploading "
-#~ "a file with binary outside of a quoted text area. You can also try your "
-#~ "query on the MySQL command line interface. The MySQL server error output "
-#~ "be . "
-#~ msgstr ""
-#~ "Istnieje szansa, że właśnie znaleziono błąd w analizatorze składni SQL. "
-#~ "Proszę zbadać bliżej swoje zapytanie i sprawdzić, czy cudzysłowy są "
-#~ "poprawne i dobrze sparowane. Inną możliwą przyczyną niepowodzenia może "
-#~ "być wysyłanie pliku ze znakami binarnymi poza obszarem tekstu ujętego w "
-#~ "cudzysłowy. Można również sprawdzić zapytanie SQL poprzez linię poleceń "
-#~ "MySQL-a. W znalezieniu przyczyny problemu może pomóc także - jeśli się "
-#~ "pojawi - poniższy opis błędu serwera MySQL. Jeśli nadal występują z "
-#~ "problemy lub analizator składni zgłasza usterkę a linia poleceń - nie, "
-#~ "ogranicz sekwencję zapytań SQL do pojedynczego, które powoduje problemy i "
-#~ "zgłoś błąd, dołączając fragment danych zawarty w poniższej sekcji TNIJ:"
-
-#~ msgctxt "$strStrucCSV"
-#~ msgid "CSV"
-#~ msgstr "Dane CSV"
-
-#~ msgid "Copy"
-#~ msgstr "Kopiuj"
-
-#~ msgid "Delete the users and reload the privileges afterwards."
-#~ msgstr "Usuń użytkowników, a następnie przeładuj uprawnienia."
-
-#~ msgid ""
-#~ "This is the cleanest way, but reloading the privileges may take a while."
-#~ msgstr ""
-#~ "Jest to najzgrabniejszy sposób, ale przeładowanie uprawnień może potrwać "
-#~ "jakiś czas."
-
-#~ msgid "has been altered."
-#~ msgstr "zostało zamienione."
-
-#~ msgid "Microsoft Excel 2000"
-#~ msgstr "Microsoft Excel 2000"
-
-#~ msgid "Internet Explorer does not support this function."
-#~ msgstr "Internet Explorer nie obsługuje tej funkcji."
-
-#~ msgid ""
-#~ "The &quot;deleted&quot; users will still be able to access the server as "
-#~ "usual until the privileges are reloaded."
-#~ msgstr ""
-#~ "Do momentu przeładowania uprawnień &quot;usunięci&quot; użytkownicy nadal "
-#~ "będą mieli dostęp do serwera."
-
-#~ msgid "Just delete the users from the privilege tables."
-#~ msgstr "Po prostu usuń użytkowników z tabeli uprawnień."
-
-#~ msgid ""
-#~ "Allows running stored procedures; has no effect in this MySQL version."
-#~ msgstr ""
-#~ "Pozwól uruchamiać zapamiętane procedury; Nie ma żadnych skutków w tej "
-#~ "wersji MySQL."
-
-#~ msgid "Process list"
-#~ msgstr "Lista procesów"
-
-#~ msgid "Reload privileges"
-#~ msgstr "Przeładuj uprawnienia"
-
-#~ msgid ""
-#~ "The users will still have the USAGE privilege until the privileges are "
-#~ "reloaded."
-#~ msgstr ""
-#~ "Nim uprawnienia zostaną przeładowane, użytkownicy nadal będą mieli "
-#~ "uprawnienie USAGE."
-
-#~ msgid "Native MS Excel format"
-#~ msgstr "Dane w formacie macierzystym MS Excela"
-
-#, fuzzy
-#~| msgid "Select All"
-#~ msgctxt "Create SELECT * query"
-#~ msgid "Select all"
-#~ msgstr "Zaznacz wszystkie"
-
-#, fuzzy
-#~| msgid "Select All"
-#~ msgctxt "Create SELECT ... query"
-#~ msgid "Select"
-#~ msgstr "Zaznacz wszystkie"
-
-#, fuzzy
-#~| msgid "Insert"
-#~ msgctxt "Create INSERT query"
-#~ msgid "Insert"
-#~ msgstr "Dodaj"
-
-#, fuzzy
-#~| msgid "Update Query"
-#~ msgctxt "Create UPDATE query"
-#~ msgid "Update"
-#~ msgstr "Zmień zapytanie"
-
-#, fuzzy
-#~| msgid "Delete"
-#~ msgctxt "Create DELETE query"
-#~ msgid "Delete"
-#~ msgstr "Usuń"
-
-#~ msgid "%1$d row(s) affected."
-#~ msgstr "Zmodyfikowanych rekordów: %1$d."
-
-#~ msgid "utf-8"
-#~ msgstr "utf-8"
-
-#~ msgid "Jan0"
-#~ msgstr "Sty0"
-
-#~ msgid "Jan1"
-#~ msgstr "Sty1"
-
-#~ msgid "Jan2"
-#~ msgstr "Sty2"
