--- a/po/uz@latin.po
+++ b/po/uz@latin.po
@@ -4,14 +4,15 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-21 13:53+0200\n"
-"PO-Revision-Date: 2010-03-12 09:20+0100\n"
-"Last-Translator: Automatically generated\n"
+"PO-Revision-Date: 2010-07-22 02:30+0200\n"
+"Last-Translator: Marc Delisle <marc@infomarc.info>\n"
 "Language-Team: uzbek_latin <uz@latin@li.org>\n"
-"Language: \n"
+"Language: uz@latin\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Translate Toolkit 1.5.3\n"
+"Plural-Forms: nplurals=1; plural=0;\n"
+"X-Generator: Pootle 2.0.1\n"
 
 #: browse_foreigners.php:37 browse_foreigners.php:58
 #: libraries/display_tbl.lib.php:416 server_privileges.php:1506
@@ -2870,10 +2871,9 @@ msgid "Table structure for table"
 msgstr "Jadval tuzilishi"
 
 #: libraries/export/latex.php:13
-#, fuzzy
 #| msgid "Content of table __TABLE__"
 msgid "Content of table @TABLE@"
-msgstr " __TABLE__ jadvalining mundarijasi"
+msgstr " @TABLE@ jadvalining mundarijasi"
 
 #: libraries/export/latex.php:14
 msgid "(continued)"
@@ -8788,384 +8788,3 @@ msgstr "Ko‘rinish nomini o‘zgartirish"
 
 #~ msgid "Default character set"
 #~ msgstr "Kodirovka"
-
-#, fuzzy
-#~| msgid "Add new field"
-#~ msgid "Add field"
-#~ msgstr "Yangi maydon qo‘shish"
-
-#~ msgid "Field"
-#~ msgstr "Maydon"
-
-#~ msgid "Records"
-#~ msgstr "Yozuvlar soni"
-
-#~ msgid "Fields terminated by"
-#~ msgstr "Maydonlar quyidagi belgi bilan bo‘lingan "
-
-#~ msgid "Fields"
-#~ msgstr "Maydonlar"
-
-#~ msgid "Add %s field(s)"
-#~ msgstr "\"%s\" maydon qo‘shish"
-
-#~ msgid "Field %s has been dropped"
-#~ msgstr "\"%s\" maydoni o‘chirildi"
-
-#~ msgid "See image/jpeg: inline"
-#~ msgstr ""
-#~ "Ustiga bosilganda rasmni katalashtirib ko‘rish mumkin bo‘lgan "
-#~ "kichraytirilgan piktogrammani ko‘rsatish. Parametr sifatida rasmning "
-#~ "piksellarda berilgan maksimal bo‘yi va enini belgilash mumkin. "
-#~ "Tomonlarning asl nisbati saqlanadi."
-
-#, fuzzy
-#~| msgid "\"zipped\""
-#~ msgid "zipped"
-#~ msgstr "zip"
-
-#, fuzzy
-#~| msgid "\"gzipped\""
-#~ msgid "gzipped"
-#~ msgstr "gzip"
-
-#, fuzzy
-#~| msgid "\"bzipped\""
-#~ msgid "bzipped"
-#~ msgstr "bzip yordamida siqilgan"
-
-#, fuzzy
-#~| msgid "Add custom comment into header (\\n splits lines)"
-#~ msgid ""
-#~ "Add custom comment into header (\n"
-#~ " splits lines)"
-#~ msgstr ""
-#~ "Sarlavhaga o‘z izohingizni qo‘shish (\\n belgisi satrdan satrga o‘tkazadi)"
-
-#~ msgid "and"
-#~ msgstr "va"
-
-#, fuzzy
-#~ msgctxt "$strBLOBRepositoryDisabled"
-#~ msgid "Disabled"
-#~ msgstr "Faolsizlashtirilgan"
-
-#, fuzzy
-#~ msgctxt "$strBLOBRepositoryEnabled"
-#~ msgid "Enabled"
-#~ msgstr "Faollashtirilgan"
-
-#, fuzzy
-#~ msgctxt "$strBLOBRepositoryRepair"
-#~ msgid "Repair"
-#~ msgstr "Sozlash"
-
-#~ msgid "Calendar"
-#~ msgstr "Taqvim"
-
-#~ msgid "MySQL&nbsp;4.0 compatible"
-#~ msgstr "MySQL 4.0 ga mos"
-
-#~ msgid "Could not load default configuration from: \"%1$s\""
-#~ msgstr " \"%1$s\" faylidan andoza konfiguratsiyani yuklab bo‘lmadi."
-
-#~ msgid "Create an index on&nbsp;%s&nbsp;columns"
-#~ msgstr "\"%s\" maydon uchun indeks tuzish"
-
-#~ msgctxt "$strCreateTableShort"
-#~ msgid "Create table"
-#~ msgstr "Jadval tuzish"
-
-#, fuzzy
-#~ msgctxt "$strCreateUserDatabaseNone"
-#~ msgid "None"
-#~ msgstr "Yo‘q"
-
-#~ msgid "Flush the table (\"FLUSH\")"
-#~ msgstr "Jadval keshini yangilash (\"FLUSH\")"
-
-#~ msgid "Invalid server index: \"%s\""
-#~ msgstr "Server raqami noto‘g‘ri: \"%s\""
-
-#~ msgctxt "$strMIME_description"
-#~ msgid "Description"
-#~ msgstr "Tavsif"
-
-#~ msgctxt "$strNoneDefault"
-#~ msgid "None"
-#~ msgstr "Yo‘q"
-
-#~ msgid "Schema of the \"%s\" database - Page %s"
-#~ msgstr "\"%s\" ma`lumotlar bazasi tuzilishi - \"%s\" sahifa"
-
-#~ msgid "The \"%s\" table doesn't exist!"
-#~ msgstr "\"%s\" jadvali mavjud emas!"
-
-#~ msgid ""
-#~ "This MySQL server works as %s in <b>replication</b> process. For further "
-#~ "information about replication status on the server, please visit the <a "
-#~ "href=\"#replication\">replication section</a>."
-#~ msgstr ""
-#~ "Ushbu MySQL serveri &lt;b&gt;replikatsiya&lt;/b&gt; jarayonida \"%s\" "
-#~ "sifatida ishlaydi. Serverning replikatsiya statusi haqida batafsil "
-#~ "ma`lumot uchun, &lt;a href=\"#replication\"&gt;replikatsiya bo‘limi&lt;/"
-#~ "a&gt;ga kiring."
-
-#~ msgid "running on %s"
-#~ msgstr "\"%s\" serverda ishlamoqda"
-
-#~ msgid "The scale factor is too small to fit the schema on one page"
-#~ msgstr "Sxema bitta sahifaga sig‘maydi. Masshtabni kichraytirish zarur."
-
-#~ msgid ""
-#~ "Cannot start session without errors, please check errors given in your "
-#~ "PHP and/or webserver log file and configure your PHP installation "
-#~ "properly."
-#~ msgstr ""
-#~ "Sessiya mexanizmi ishida xatolik yuz berdi.  PHP va/yoki Veb-server "
-#~ "jurnali tekshirib ko‘ring va kerakli tuzatishlar kiriting."
-
-#, fuzzy
-#~| msgid "Import currencies ($5.00 to 5.00)"
-#~ msgid "Import currencies (.00 to 5.00)"
-#~ msgstr "Pul birliklarini import qilish (masalan, $5.00 ni 5.00 ga)"
-
-#, fuzzy
-#~| msgid ""
-#~| "However on last run no data has been parsed, this usually means "
-#~| "phpMyAdmin won't be able to finish this import unless you increase php "
-#~| "time limits."
-#~ msgid ""
-#~ "However on last run no data has been parsed, this usually means "
-#~ "phpMyAdmin won"
-#~ msgstr ""
-#~ "Oxirgi ishga tushirish bo‘lishiga qaramasdan, ma`lumotlar qayta "
-#~ "ishlanmadi. Odatda, bu hol, php-ssenariylar uchun ajratilgan vaqt "
-#~ "oshirilmaguncha phpMyAdmin dasturi import jarayonini yakunla olmasligini "
-#~ "bildiradi."
-
-#, fuzzy
-#~| msgid "None"
-#~ msgctxt "None action"
-#~ msgid "None"
-#~ msgstr "Yo‘q"
-
-#, fuzzy
-#~| msgid "None"
-#~ msgctxt ""
-#~ msgid "None"
-#~ msgstr "Yo‘q"
-
-#, fuzzy
-#~| msgid "Grant all privileges on wildcard name (username\\_%)"
-#~ msgid "Grant all privileges on wildcard name (username_%)"
-#~ msgstr ""
-#~ "(foydalanuvchi\\_%) shabloniga to‘g‘ri keladigan barcha ma`lumotlar "
-#~ "bazalariga to‘liq privilegiyalarni berish."
-
-#, fuzzy
-#~| msgid "The \"%s\" table doesn't exist!"
-#~ msgid "The %s table doesn"
-#~ msgstr "\"%s\" jadvali mavjud emas!"
-
-#, fuzzy
-#~| msgid "Could not load default configuration from: \"%1$s\""
-#~ msgid "Could not load default configuration from: %1"
-#~ msgstr " \"%1$s\" faylidan andoza konfiguratsiyani yuklab bo‘lmadi."
-
-#, fuzzy
-#~| msgid "Invalid hostname for server %1$s. Please review your configuration."
-#~ msgid "Invalid hostname for server %1. Please review your configuration."
-#~ msgstr ""
-#~ " %1$s serveri uchun noto‘g‘ri xost nomi ko‘rsatilgan. phpMyAdmin "
-#~ "konfiguratsion faylida belgilangan sozlashlarni to‘g‘irlang."
-
-#, fuzzy
-#~| msgid "Error renaming table %1$s to %2$s"
-#~ msgid "Error renaming table %1 to %2"
-#~ msgstr "%1$s jadvalini %2$s deb qayta nomlashda xatolik"
-
-#, fuzzy
-#~| msgid ""
-#~| "Cannot load [a@http://php.net/%1$s@Documentation][em]%1$s[/em][/a] "
-#~| "extension. Please check your PHP configuration."
-#~ msgid ""
-#~ "Cannot load [a@http://php.net/%1@Documentation][em]%1[/em][/a] extension. "
-#~ "Please check your PHP configuration."
-#~ msgstr ""
-#~ "[a@http://php.net/%1$s@Documentation][em]%1$s[/em][/a] kengaytmani yuklab "
-#~ "bo‘lmadi! PHP konfiguratsiyasini sozlang."
-
-#, fuzzy
-#~| msgid ""
-#~| "This server is not configured as master in a replication process. Would "
-#~| "you like to <a href=\"%s\">configure</a> it?"
-#~ msgid ""
-#~ "This server is not configured as master in a replication process. Would "
-#~ "you like to <a href=%s>configure</a> it?"
-#~ msgstr ""
-#~ "Ushbu sеrvеr rеplikatsiya jarayonida \"bosh sеrvеr\" dеb konfiguratsiya "
-#~ "qilinmagan. Siz uni <a href=\"%s\">konfiguratsiya</a> qilmoqchimisiz?"
-
-#, fuzzy
-#~| msgid ""
-#~| "This server is not configured as slave in a replication process. Would "
-#~| "you like to <a href=\"%s\">configure</a> it?"
-#~ msgid ""
-#~ "This server is not configured as slave in a replication process. Would "
-#~ "you like to <a href=%s>configure</a> it?"
-#~ msgstr ""
-#~ "Ushbu sеrvеr rеplikatsiya jarayonida \"tobе sеrvеr\" dеb konfiguratsiya "
-#~ "qilinmagan. Siz uni <a href=\"%s\">konfiguratsiya</a> qilmoqchimisiz?"
-
-#, fuzzy
-#~| msgid "Could not connect to MySQL server"
-#~ msgid "(or the local MySQL server"
-#~ msgstr "MySQL-serverga ulanib bo‘lmadi"
-
-#, fuzzy
-#~| msgid ""
-#~| "There is a chance that you may have found a bug in the SQL parser. "
-#~| "Please examine your query closely, and check that the quotes are correct "
-#~| "and not mis-matched. Other possible failure causes may be that you are "
-#~| "uploading a file with binary outside of a quoted text area. You can also "
-#~| "try your query on the MySQL command line interface. The MySQL server "
-#~| "error output below, if there is any, may also help you in diagnosing the "
-#~| "problem. If you still have problems or if the parser fails where the "
-#~| "command line interface succeeds, please reduce your SQL query input to "
-#~| "the single query that causes problems, and submit a bug report with the "
-#~| "data chunk in the CUT section below:"
-#~ msgid ""
-#~ "There is a chance that you may have found a bug in the SQL parser. Please "
-#~ "examine your query closely, and check that the quotes are correct and not "
-#~ "mis-matched. Other possible failure causes may be that you are uploading "
-#~ "a file with binary outside of a quoted text area. You can also try your "
-#~ "query on the MySQL command line interface. The MySQL server error output "
-#~ "be . "
-#~ msgstr ""
-#~ "SQL ishida xatolik yuz berdi. So‘rov to‘g‘ri tuzilganligiga, unda xato va "
-#~ "yopilmagan qavs(lar) yoki qo‘shtirnoq(lar) yo‘qligiga ishonch hosil "
-#~ "qiling. Shuningdek, agar fayl yuklangan bo‘lsa, uning matnida qo‘shtirnoq "
-#~ "ichiga olinmagan binar (ikkilik) ma`lumotlar bo‘lishi mumkin. So‘rovni "
-#~ "MySQL buyruqlar satridan bajarib ko‘ring. Agar xato mavjud bo‘lsa, pastda "
-#~ "MySQL server xatolikni ko‘rsatadi va o‘sha xabar muammo yechimini "
-#~ "topishga yordam beradi. Agar muammo hal bo‘lmasa, xatolikka olib "
-#~ "kelayotgan so‘rov qismini aniqlang va quyida CUT seksiyasidagi "
-#~ "ma`lumotlar bilan qo‘shib, xato tavsiflarini ishlab chiqaruvchilarga "
-#~ "yuboring:"
-
-#~ msgctxt "$strStrucCSV"
-#~ msgid "CSV"
-#~ msgstr "CSV"
-
-#~ msgid "Copy"
-#~ msgstr "Nusxa ko‘chirish"
-
-#~ msgid "Delete the users and reload the privileges afterwards."
-#~ msgstr ""
-#~ "Barcha foydalanuvchilarni o‘chirish va privilegiyalarni qayta yuklash."
-
-#~ msgid ""
-#~ "This is the cleanest way, but reloading the privileges may take a while."
-#~ msgstr ""
-#~ "Bu eng yaxshi usul, lekin privilegiyalarni qayta yuklash vaqt talab "
-#~ "etishi mumkin."
-
-#~ msgid "has been altered."
-#~ msgstr " o‘zgartirildi."
-
-#~ msgid "Microsoft Excel 2000"
-#~ msgstr "Microsoft Excel 2000"
-
-#~ msgid "Internet Explorer does not support this function."
-#~ msgstr "Internet Explorer dasturida ushbu funksiya mavjud emas."
-
-#~ msgid ""
-#~ "The &quot;deleted&quot; users will still be able to access the server as "
-#~ "usual until the privileges are reloaded."
-#~ msgstr ""
-#~ "Privilegiyalar qayta yuklanmaguncha \"o‘chirilgan\" foydalanuvchilar "
-#~ "serverga kirish huquqiga ega bo‘ladilar."
-
-#~ msgid "Just delete the users from the privilege tables."
-#~ msgstr "Faqat privilegiyalar jadvalidan foydalanuvchini o‘chirish."
-
-#~ msgid ""
-#~ "Allows running stored procedures; has no effect in this MySQL version."
-#~ msgstr ""
-#~ "Saqlanadigan muolajalarni bajarishga ruxsat beradi (MySQL-serverning "
-#~ "ushbu versiyada bunday xususiyat mavjud emas)"
-
-#~ msgid "Process list"
-#~ msgstr "Jarayonlar ro‘yxati"
-
-#~ msgid "Reload privileges"
-#~ msgstr "Privilegiyalarni qayta yuklash"
-
-#~ msgid ""
-#~ "The users will still have the USAGE privilege until the privileges are "
-#~ "reloaded."
-#~ msgstr ""
-#~ "Privilegiyalar qayta yuklangunga qadar, foydalanuvchilarda USAGE kabi "
-#~ "global privilegiyalar saqlanib qolinadi."
-
-#~ msgid "Native MS Excel format"
-#~ msgstr "MS Excel formati"
-
-#~ msgid "Alter index(s)"
-#~ msgstr "Indеk(lar)ni o‘zgartirish"
-
-#~ msgid "Tracking Mechanism"
-#~ msgstr "Kuzatish mеxanizmi"
-
-#, fuzzy
-#~| msgid "Select All"
-#~ msgctxt "Create SELECT * query"
-#~ msgid "Select all"
-#~ msgstr "Barchasini belgilash"
-
-#, fuzzy
-#~| msgid "Select All"
-#~ msgctxt "Create SELECT ... query"
-#~ msgid "Select"
-#~ msgstr "Barchasini belgilash"
-
-#, fuzzy
-#~| msgid "Insert"
-#~ msgctxt "Create INSERT query"
-#~ msgid "Insert"
-#~ msgstr "Qo‘yish"
-
-#, fuzzy
-#~| msgid "Updated"
-#~ msgctxt "Create UPDATE query"
-#~ msgid "Update"
-#~ msgstr "Yangilandi"
-
-#, fuzzy
-#~| msgid "Delete"
-#~ msgctxt "Create DELETE query"
-#~ msgid "Delete"
-#~ msgstr "O‘chirish"
-
-#~ msgid "%1$d row(s) affected."
-#~ msgstr "%1$d ta qatorlarga ta`sir etdi."
-
-#~ msgid "utf-8"
-#~ msgstr "utf-8"
-
-#~ msgid "Jan0"
-#~ msgstr "Yanv0"
-
-#~ msgid "Jan1"
-#~ msgstr "Yanv1"
-
-#~ msgid "Jan2"
-#~ msgstr "Yanv2"
-
-#~ msgid ""
-#~ "Structure Difference' ;\n"
-#~ "$strStructureForView = 'Structure for view"
-#~ msgstr ""
-#~ "Tuzilishdagi farq' ;\n"
-#~ "$strStructureForView = 'Namoyish etish uchun tuzilma"
