--- a/po/uz.po
+++ b/po/uz.po
@@ -4,14 +4,15 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-21 13:53+0200\n"
-"PO-Revision-Date: 2010-03-12 09:20+0100\n"
-"Last-Translator: Automatically generated\n"
+"PO-Revision-Date: 2010-07-22 02:31+0200\n"
+"Last-Translator: Marc Delisle <marc@infomarc.info>\n"
 "Language-Team: uzbek_cyrillic <uz@li.org>\n"
-"Language: \n"
+"Language: uz\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Translate Toolkit 1.5.3\n"
+"Plural-Forms: nplurals=1; plural=0;\n"
+"X-Generator: Pootle 2.0.1\n"
 
 #: browse_foreigners.php:37 browse_foreigners.php:58
 #: libraries/display_tbl.lib.php:416 server_privileges.php:1506
@@ -2857,10 +2858,9 @@ msgid "Table structure for table"
 msgstr "Жадвал тузилиши"
 
 #: libraries/export/latex.php:13
-#, fuzzy
 #| msgid "Content of table __TABLE__"
 msgid "Content of table @TABLE@"
-msgstr " __TABLE__ жадвалининг мундарижаси"
+msgstr "@TABLE@ жадвалининг мундарижаси"
 
 #: libraries/export/latex.php:14
 msgid "(continued)"
@@ -8723,380 +8723,3 @@ msgstr "Кўриниш номини ўзгартириш"
 
 #~ msgid "Default character set"
 #~ msgstr "Кодировка"
-
-#, fuzzy
-#~| msgid "Add new field"
-#~ msgid "Add field"
-#~ msgstr "Янги майдон қўшиш"
-
-#~ msgid "Field"
-#~ msgstr "Майдон"
-
-#~ msgid "Records"
-#~ msgstr "Ёзувлар сони"
-
-#~ msgid "Fields terminated by"
-#~ msgstr "Майдонлар қуйидаги белги билан бўлинган "
-
-#~ msgid "Fields"
-#~ msgstr "Майдонлар"
-
-#~ msgid "Add %s field(s)"
-#~ msgstr "\"%s\" майдон қўшиш"
-
-#~ msgid "Field %s has been dropped"
-#~ msgstr "\"%s\" майдони ўчирилди"
-
-#~ msgid "See image/jpeg: inline"
-#~ msgstr ""
-#~ "Устига босилганда расмни каталаштириб кўриш мумкин бўлган кичрайтирилган "
-#~ "пиктограммани кўрсатиш. Параметр сифатида расмнинг пикселларда берилган "
-#~ "максимал бўйи ва энини белгилаш мумкин. Томонларнинг асл нисбати "
-#~ "сақланади."
-
-#, fuzzy
-#~| msgid "\"zipped\""
-#~ msgid "zipped"
-#~ msgstr "zip"
-
-#, fuzzy
-#~| msgid "\"gzipped\""
-#~ msgid "gzipped"
-#~ msgstr "gzip"
-
-#, fuzzy
-#~| msgid "\"bzipped\""
-#~ msgid "bzipped"
-#~ msgstr "bzip ёрдамида сиқилган"
-
-#, fuzzy
-#~| msgid "Add custom comment into header (\\n splits lines)"
-#~ msgid ""
-#~ "Add custom comment into header (\n"
-#~ " splits lines)"
-#~ msgstr ""
-#~ "Сарлавҳага ўз изоҳингизни қўшиш (\\n белгиси сатрдан сатрга ўтказади)"
-
-#~ msgid "and"
-#~ msgstr "ва"
-
-#, fuzzy
-#~ msgctxt "$strBLOBRepositoryDisabled"
-#~ msgid "Disabled"
-#~ msgstr "Фаолсизлаштирилган"
-
-#, fuzzy
-#~ msgctxt "$strBLOBRepositoryEnabled"
-#~ msgid "Enabled"
-#~ msgstr "Фаоллаштирилган"
-
-#, fuzzy
-#~ msgctxt "$strBLOBRepositoryRepair"
-#~ msgid "Repair"
-#~ msgstr "Созлаш"
-
-#~ msgid "Calendar"
-#~ msgstr "Тақвим"
-
-#~ msgid "MySQL&nbsp;4.0 compatible"
-#~ msgstr "MySQL 4.0 га мос"
-
-#~ msgid "Could not load default configuration from: \"%1$s\""
-#~ msgstr " \"%1$s\" файлидан андоза конфигурацияни юклаб бўлмади."
-
-#~ msgid "Create an index on&nbsp;%s&nbsp;columns"
-#~ msgstr "\"%s\" майдон учун индекс тузиш"
-
-#~ msgctxt "$strCreateTableShort"
-#~ msgid "Create table"
-#~ msgstr "Жадвал тузиш"
-
-#, fuzzy
-#~ msgctxt "$strCreateUserDatabaseNone"
-#~ msgid "None"
-#~ msgstr "Йўқ"
-
-#~ msgid "Flush the table (\"FLUSH\")"
-#~ msgstr "Жадвал кешини янгилаш (\"FLUSH\")"
-
-#~ msgid "Invalid server index: \"%s\""
-#~ msgstr "Сервер рақами нотўғри: \"%s\""
-
-#~ msgctxt "$strMIME_description"
-#~ msgid "Description"
-#~ msgstr "Тавсиф"
-
-#~ msgctxt "$strNoneDefault"
-#~ msgid "None"
-#~ msgstr "Йўқ"
-
-#~ msgid "Schema of the \"%s\" database - Page %s"
-#~ msgstr "\"%s\" маълумотлар базаси тузилиши - \"%s\" саҳифа"
-
-#~ msgid "The \"%s\" table doesn't exist!"
-#~ msgstr "\"%s\" жадвали мавжуд эмас!"
-
-#~ msgid ""
-#~ "This MySQL server works as %s in <b>replication</b> process. For further "
-#~ "information about replication status on the server, please visit the <a "
-#~ "href=\"#replication\">replication section</a>."
-#~ msgstr ""
-#~ "Ушбу MySQL сервери &lt;b&gt;репликация&lt;/b&gt; жараёнида \\\"%s\\\" "
-#~ "сифатида ишлайди. Сервернинг репликация статуси ҳақида батафсил маълумот "
-#~ "учун, &lt;a href=\"#replication\"&gt;репликация бўлими&lt;/a&gt;га киринг."
-
-#~ msgid "running on %s"
-#~ msgstr "\"%s\" серверда ишламоқда"
-
-#~ msgid "The scale factor is too small to fit the schema on one page"
-#~ msgstr "Схема битта саҳифага сиғмайди. Масштабни кичрайтириш зарур."
-
-#~ msgid ""
-#~ "Cannot start session without errors, please check errors given in your "
-#~ "PHP and/or webserver log file and configure your PHP installation "
-#~ "properly."
-#~ msgstr ""
-#~ "Сессия механизми ишида хатолик юз берди.  PHP ва/ёки Веб-сервер журнали "
-#~ "текшириб кўринг ва керакли тузатишлар киритинг."
-
-#, fuzzy
-#~| msgid "Import currencies ($5.00 to 5.00)"
-#~ msgid "Import currencies (.00 to 5.00)"
-#~ msgstr "Пул бирликларини импорт қилиш (масалан, $5.00 ни 5.00 га)"
-
-#, fuzzy
-#~| msgid ""
-#~| "However on last run no data has been parsed, this usually means "
-#~| "phpMyAdmin won't be able to finish this import unless you increase php "
-#~| "time limits."
-#~ msgid ""
-#~ "However on last run no data has been parsed, this usually means "
-#~ "phpMyAdmin won"
-#~ msgstr ""
-#~ "Охирги ишга тушириш бўлишига қарамасдан, маълумотлар қайта ишланмади. "
-#~ "Одатда, бу ҳол, php-сценарийлар учун ажратилган вақт оширилмагунча "
-#~ "phpMyAdmin дастури импорт жараёнини якунла олмаслигини билдиради."
-
-#, fuzzy
-#~| msgid "None"
-#~ msgctxt "None action"
-#~ msgid "None"
-#~ msgstr "Йўқ"
-
-#, fuzzy
-#~| msgid "None"
-#~ msgctxt ""
-#~ msgid "None"
-#~ msgstr "Йўқ"
-
-#, fuzzy
-#~| msgid "Grant all privileges on wildcard name (username\\_%)"
-#~ msgid "Grant all privileges on wildcard name (username_%)"
-#~ msgstr ""
-#~ "(фойдаланувчи\\_%) шаблонига тўғри келадиган барча маълумотлар базаларига "
-#~ "тўлиқ привилегияларни бериш."
-
-#, fuzzy
-#~| msgid "The \"%s\" table doesn't exist!"
-#~ msgid "The %s table doesn"
-#~ msgstr "\"%s\" жадвали мавжуд эмас!"
-
-#, fuzzy
-#~| msgid "Could not load default configuration from: \"%1$s\""
-#~ msgid "Could not load default configuration from: %1"
-#~ msgstr " \"%1$s\" файлидан андоза конфигурацияни юклаб бўлмади."
-
-#, fuzzy
-#~| msgid "Invalid hostname for server %1$s. Please review your configuration."
-#~ msgid "Invalid hostname for server %1. Please review your configuration."
-#~ msgstr ""
-#~ " %1$s сервери учун нотўғри хост номи кўрсатилган. phpMyAdmin "
-#~ "конфигурацион файлида белгиланган созлашларни тўғирланг."
-
-#, fuzzy
-#~| msgid "Error renaming table %1$s to %2$s"
-#~ msgid "Error renaming table %1 to %2"
-#~ msgstr "%1$s жадвалини %2$s деб қайта номлашда хатолик"
-
-#, fuzzy
-#~| msgid ""
-#~| "Cannot load [a@http://php.net/%1$s@Documentation][em]%1$s[/em][/a] "
-#~| "extension. Please check your PHP configuration."
-#~ msgid ""
-#~ "Cannot load [a@http://php.net/%1@Documentation][em]%1[/em][/a] extension. "
-#~ "Please check your PHP configuration."
-#~ msgstr ""
-#~ "[a@http://php.net/%1$s@Documentation][em]%1$s[/em][/a] кенгайтмани юклаб "
-#~ "бўлмади! PHP конфигурациясини созланг."
-
-#, fuzzy
-#~| msgid ""
-#~| "This server is not configured as master in a replication process. Would "
-#~| "you like to <a href=\"%s\">configure</a> it?"
-#~ msgid ""
-#~ "This server is not configured as master in a replication process. Would "
-#~ "you like to <a href=%s>configure</a> it?"
-#~ msgstr ""
-#~ "Ушбу сервер репликация жараёнида \"бош сервер\" деб конфигурация "
-#~ "қилинмаган. Сиз уни <a href=\"%s\">конфигурация</a> қилмоқчимисиз?"
-
-#, fuzzy
-#~| msgid ""
-#~| "This server is not configured as slave in a replication process. Would "
-#~| "you like to <a href=\"%s\">configure</a> it?"
-#~ msgid ""
-#~ "This server is not configured as slave in a replication process. Would "
-#~ "you like to <a href=%s>configure</a> it?"
-#~ msgstr ""
-#~ "Ушбу сервер репликация жараёнида \"тобе сервер\" деб конфигурация "
-#~ "қилинмаган. Сиз уни <a href=\"%s\">конфигурация</a> қилмоқчимисиз?"
-
-#, fuzzy
-#~| msgid "Could not connect to MySQL server"
-#~ msgid "(or the local MySQL server"
-#~ msgstr "MySQL-серверга уланиб бўлмади"
-
-#, fuzzy
-#~| msgid ""
-#~| "There is a chance that you may have found a bug in the SQL parser. "
-#~| "Please examine your query closely, and check that the quotes are correct "
-#~| "and not mis-matched. Other possible failure causes may be that you are "
-#~| "uploading a file with binary outside of a quoted text area. You can also "
-#~| "try your query on the MySQL command line interface. The MySQL server "
-#~| "error output below, if there is any, may also help you in diagnosing the "
-#~| "problem. If you still have problems or if the parser fails where the "
-#~| "command line interface succeeds, please reduce your SQL query input to "
-#~| "the single query that causes problems, and submit a bug report with the "
-#~| "data chunk in the CUT section below:"
-#~ msgid ""
-#~ "There is a chance that you may have found a bug in the SQL parser. Please "
-#~ "examine your query closely, and check that the quotes are correct and not "
-#~ "mis-matched. Other possible failure causes may be that you are uploading "
-#~ "a file with binary outside of a quoted text area. You can also try your "
-#~ "query on the MySQL command line interface. The MySQL server error output "
-#~ "be . "
-#~ msgstr ""
-#~ "SQL ишида хатолик юз берди. Сўров тўғри тузилганлигига, унда хато ва "
-#~ "ёпилмаган қавс(лар) ёки қўштирноқ(лар) йўқлигига ишонч ҳосил қилинг. "
-#~ "Шунингдек, агар файл юкланган бўлса, унинг матнида қўштирноқ ичига "
-#~ "олинмаган бинар (иккилик) маълумотлар бўлиши мумкин. Сўровни MySQL "
-#~ "буйруқлар сатридан бажариб кўринг. Агар хато мавжуд бўлса, пастда MySQL "
-#~ "сервер хатоликни кўрсатади ва ўша хабар муаммо ечимини топишга ёрдам "
-#~ "беради. Агар муаммо ҳал бўлмаса, хатоликка олиб келаётган сўров қисмини "
-#~ "аниқланг ва қуйида CUT секциясидаги маълумотлар билан қўшиб, хато "
-#~ "тавсифларини ишлаб чиқарувчиларга юборинг:"
-
-#~ msgctxt "$strStrucCSV"
-#~ msgid "CSV"
-#~ msgstr "CSV"
-
-#~ msgid "Copy"
-#~ msgstr "Нусха кўчириш"
-
-#~ msgid "Delete the users and reload the privileges afterwards."
-#~ msgstr "Барча фойдаланувчиларни ўчириш ва привилегияларни қайта юклаш."
-
-#~ msgid ""
-#~ "This is the cleanest way, but reloading the privileges may take a while."
-#~ msgstr ""
-#~ "Бу энг яхши усул, лекин привилегияларни қайта юклаш вақт талаб этиши "
-#~ "мумкин."
-
-#~ msgid "has been altered."
-#~ msgstr " ўзгартирилди."
-
-#~ msgid "Microsoft Excel 2000"
-#~ msgstr "Microsoft Excel 2000"
-
-#~ msgid "Internet Explorer does not support this function."
-#~ msgstr "Internet Explorer дастурида ушбу функция мавжуд эмас."
-
-#~ msgid ""
-#~ "The &quot;deleted&quot; users will still be able to access the server as "
-#~ "usual until the privileges are reloaded."
-#~ msgstr ""
-#~ "Привилегиялар қайта юкланмагунча \"ўчирилган\" фойдаланувчилар серверга "
-#~ "кириш ҳуқуқига эга бўладилар."
-
-#~ msgid "Just delete the users from the privilege tables."
-#~ msgstr "Фақат привилегиялар жадвалидан фойдаланувчини ўчириш."
-
-#~ msgid ""
-#~ "Allows running stored procedures; has no effect in this MySQL version."
-#~ msgstr ""
-#~ "Сақланадиган муолажаларни бажаришга рухсат беради (MySQL-сервернинг ушбу "
-#~ "версияда бундай хусусият мавжуд эмас)"
-
-#~ msgid "Process list"
-#~ msgstr "Жараёнлар рўйхати"
-
-#~ msgid "Reload privileges"
-#~ msgstr "Привилегияларни қайта юклаш"
-
-#~ msgid ""
-#~ "The users will still have the USAGE privilege until the privileges are "
-#~ "reloaded."
-#~ msgstr ""
-#~ "Привилегиялар қайта юклангунга қадар, фойдаланувчиларда USAGE каби глобал "
-#~ "привилегиялар сақланиб қолинади."
-
-#~ msgid "Native MS Excel format"
-#~ msgstr "MS Excel формати"
-
-#~ msgid "Alter index(s)"
-#~ msgstr "Индек(лар)ни ўзгартириш"
-
-#~ msgid "Tracking Mechanism"
-#~ msgstr "Кузатиш механизми"
-
-#, fuzzy
-#~| msgid "Select All"
-#~ msgctxt "Create SELECT * query"
-#~ msgid "Select all"
-#~ msgstr "Барчасини белгилаш"
-
-#, fuzzy
-#~| msgid "Select All"
-#~ msgctxt "Create SELECT ... query"
-#~ msgid "Select"
-#~ msgstr "Барчасини белгилаш"
-
-#, fuzzy
-#~| msgid "Insert"
-#~ msgctxt "Create INSERT query"
-#~ msgid "Insert"
-#~ msgstr "Қўйиш"
-
-#, fuzzy
-#~| msgid "Updated"
-#~ msgctxt "Create UPDATE query"
-#~ msgid "Update"
-#~ msgstr "Янгиланди"
-
-#, fuzzy
-#~| msgid "Delete"
-#~ msgctxt "Create DELETE query"
-#~ msgid "Delete"
-#~ msgstr "Ўчириш"
-
-#~ msgid "%1$d row(s) affected."
-#~ msgstr "%1$d та қаторларга таъсир этди."
-
-#~ msgid "utf-8"
-#~ msgstr "utf-8"
-
-#~ msgid "Jan0"
-#~ msgstr "Янв0"
-
-#~ msgid "Jan1"
-#~ msgstr "Янв1"
-
-#~ msgid "Jan2"
-#~ msgstr "Янв2"
-
-#~ msgid ""
-#~ "Structure Difference' ;\n"
-#~ "$strStructureForView = 'Structure for view"
-#~ msgstr ""
-#~ "Тузилишдаги фарқ' ;\n"
-#~ "$strStructureForView = 'Намойиш этиш учун тузилма"
