--- a/po/nb.po
+++ b/po/nb.po
@@ -2734,10 +2734,9 @@ msgid "Table structure for table"
 msgstr "Tabellstruktur for tabell"
 
 #: libraries/export/latex.php:13
-#, fuzzy
 #| msgid "Content of table __TABLE__"
 msgid "Content of table @TABLE@"
-msgstr "Innhold i tabell __TABLE__"
+msgstr "Innhold i tabell @TABLE@"
 
 #: libraries/export/latex.php:14
 msgid "(continued)"
