Translation update done using Pootle.

--- a/po/nb.po
+++ b/po/nb.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-21 13:53+0200\n"
-"PO-Revision-Date: 2010-07-22 08:42+0200\n"
+"PO-Revision-Date: 2010-07-22 08:43+0200\n"
 "Last-Translator:  <sven.erik.andersen@gmail.com>\n"
 "Language-Team: norwegian <no@li.org>\n"
 "Language: nb\n"
@@ -7752,10 +7752,9 @@ msgid "Showing SQL query"
 msgstr "Viser SQL spørring"
 
 #: sql.php:517
-#, fuzzy
 #| msgid "Validate SQL"
 msgid "Validated SQL"
-msgstr "Test SQL"
+msgstr "Validert SQL"
 
 #: sql.php:638
 #, php-format
