--- a/po/ug.po
+++ b/po/ug.po
@@ -7,8 +7,8 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-21 13:53+0200\n"
-"PO-Revision-Date: 2010-07-21 06:37+0200\n"
-"Last-Translator:  <ablat7ihlim@yahoo.com.cn>\n"
+"PO-Revision-Date: 2010-07-22 12:44+0200\n"
+"Last-Translator:  <gheni@yahoo.cn>\n"
 "Language-Team: Uyghur <ug@li.org>\n"
 "Language: ug\n"
 "MIME-Version: 1.0\n"
@@ -1415,7 +1415,7 @@ msgstr ""
 
 #: libraries/Theme.class.php:380
 msgid "No preview available."
-msgstr ""
+msgstr "ئالدىن كۆرگىنى بولمايدۇ."
 
 #: libraries/Theme.class.php:383
 msgid "take it"
